Fix scrollbars screwing up layout on Windows

--- a/style.css
+++ b/style.css
@@ -144,6 +144,10 @@ main {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: calc(10vw + 5px);
+}
+
+[dir="rtl"] main {
+    padding-left: 0;
     padding-right: calc(10vw + 5px);
 }
 
@@ -523,7 +527,7 @@ hr {
         display: unset;
     }
 
-    main {
+    main, [dir="rtl"] main {
         padding-left: 20px;
         padding-right: 20px;
     }
